# Physically-Based-Simulation-Flexible-drone-and-contact

./: .gitignore  .polyscope.ini  CMakeLists.txt  README.md  analitical_jac.py  collision_check.cpp  config.json  debug_contacts.cpp  debug_hull.cpp  debug_rotation.cpp  imgui.ini  main.cpp  plot_energy.py
animation_data/: config.json
animation_data/frames/: frame_0000.json  frame_0001.json  frame_0002.json  frame_0003.json  frame_0004.json  frame_0005.json  frame_0006.json  frame_0007.json  frame_0008.json  frame_0009.json  frame_0010.json  frame_0011.json  frame_0012.json  frame_0013.json  frame_0014.json  frame_0015.json  frame_0016.json  frame_0017.json  frame_0018.json  frame_0019.json  frame_0020.json  frame_0021.json  frame_0022.json  frame_0023.json  frame_0024.json  frame_0025.json  frame_0026.json  frame_0027.json  frame_0028.json  frame_0029.json  frame_0030.json  frame_0031.json  frame_0032.json  frame_0033.json  frame_0034.json  frame_0035.json  frame_0036.json  frame_0037.json  frame_0038.json  frame_0039.json  (+981 more)
experiments/floppy_arms/: frame_0000.json  frame_0001.json  frame_0002.json  frame_0003.json  frame_0004.json  frame_0005.json  frame_0006.json  frame_0007.json  frame_0008.json  frame_0009.json  frame_0010.json  frame_0011.json  frame_0012.json  frame_0013.json  frame_0014.json  frame_0015.json  frame_0016.json  frame_0017.json  frame_0018.json  frame_0019.json  frame_0020.json  frame_0021.json  frame_0022.json  frame_0023.json  frame_0024.json  frame_0025.json  frame_0026.json  frame_0027.json  frame_0028.json  frame_0029.json  frame_0030.json  frame_0031.json  frame_0032.json  frame_0033.json  frame_0034.json  frame_0035.json  frame_0036.json  frame_0037.json  frame_0038.json  frame_0039.json  (+5205 more)
experiments/vertex_only_contact/: frame_0000.json  frame_0001.json  frame_0002.json  frame_0003.json  frame_0004.json  frame_0005.json  frame_0006.json  frame_0007.json  frame_0008.json  frame_0009.json  frame_0010.json  frame_0011.json  frame_0012.json  frame_0013.json  frame_0014.json  frame_0015.json  frame_0016.json  frame_0017.json  frame_0018.json  frame_0019.json  frame_0020.json  frame_0021.json  frame_0022.json  frame_0023.json  frame_0024.json  frame_0025.json  frame_0026.json  frame_0027.json  frame_0028.json  frame_0029.json  frame_0030.json  frame_0031.json  frame_0032.json  frame_0033.json  frame_0034.json  frame_0035.json  frame_0036.json  frame_0037.json  frame_0038.json  frame_0039.json  (+810 more)
experiments/very_good_contact_too_stiff_arms/: frame_0000.json  frame_0001.json  frame_0002.json  frame_0003.json  frame_0004.json  frame_0005.json  frame_0006.json  frame_0007.json  frame_0008.json  frame_0009.json  frame_0010.json  frame_0011.json  frame_0012.json  frame_0013.json  frame_0014.json  frame_0015.json  frame_0016.json  frame_0017.json  frame_0018.json  frame_0019.json  frame_0020.json  frame_0021.json  frame_0022.json  frame_0023.json  frame_0024.json  frame_0025.json  frame_0026.json  frame_0027.json  frame_0028.json  frame_0029.json  frame_0030.json  frame_0031.json  frame_0032.json  frame_0033.json  frame_0034.json  frame_0035.json  frame_0036.json  frame_0037.json  frame_0038.json  frame_0039.json  (+737 more)
export/: frame_0000.json  frame_0001.json  frame_0002.json  frame_0003.json  frame_0004.json  frame_0005.json  frame_0006.json  frame_0007.json  frame_0008.json  frame_0009.json  frame_0010.json  frame_0011.json  frame_0012.json  frame_0013.json  frame_0014.json  frame_0015.json  frame_0016.json  frame_0017.json  frame_0018.json  frame_0019.json  frame_0020.json  frame_0021.json  frame_0022.json  frame_0023.json  frame_0024.json  frame_0025.json  frame_0026.json  frame_0027.json  frame_0028.json  frame_0029.json  frame_0030.json  frame_0031.json  frame_0032.json  frame_0033.json  frame_0034.json  frame_0035.json  frame_0036.json  frame_0037.json  frame_0038.json  frame_0039.json  (+2292 more)
graphics/urdf/: morphy.urdf
model/: ContactGeometry.cpp  ContactGeometry.h  ContactTypes.h  DroneDynamics.cpp  DroneDynamics.h  DroneParameters.cpp  DroneParameters.h  ExplicitEuler.h  HullLoader.cpp  HullLoader.h  ImplicitEuler.h  ImplicitMidpointIRK.h  RungeKutta4.h  SimpleYaml.cpp  SimpleYaml.h  drone_parameters.yaml  morphy_frame_exporter.hpp
src/: DroneSimulationApp.cpp  DroneSimulationApp.h  SceneUtils.cpp  SceneUtils.h  UrdfRig.cpp  UrdfRig.h
tools/: contact_drop.cpp  contact_smoketest.cpp  convex_hull.cpp  generate_simplified_hulls.py
